<resources>
    <string name="app_name">Realtime Database</string>

    <string name="name">Enter Your Name</string>
    <string name="password">Enter Your Password</string>
    <string name="email">Enter Your Email</string>

    <string name="mobile_number">Enter Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="update_realtime_database">Update Realtime Database</string>
    <string name="realtime_database">Realtime Database</string>
    <string name="imageview">ImageView</string>
    <string name="update">Update</string>
    <string name="todo">TODO</string>
    <string name="register_page">Register Page</string>
    <string name="upload_image">Upload Image</string>
</resources>