<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".UpdateRealtime">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:text="@string/update_realtime_database"
            android:textAppearance="@style/TextAppearance.Shrine.Title"
            android:textSize="20sp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageViewUpdateRealtime"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"
                android:src="@drawable/person" />

        </androidx.cardview.widget.CardView>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/getName"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint=""
            android:padding="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/getEmail"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint=""
            android:padding="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/getMobileNumber"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint=""
            android:padding="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/getPassword"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint=""
            android:padding="20dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                style="@style/Widget.Shrine.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:text="@string/submit"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateButton"
                style="@style/Widget.Shrine.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:text="@string/update"
                android:textAllCaps="false"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>
